<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textview"
        android:text="To Do Tasks"
        android:textSize="32sp"
        android:textColor="#000"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/recyclerview"
        android:layout_below="@id/textview"
        android:nestedScrollingEnabled="true"/>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:src="@drawable/baseline_add_24" />

<!--    <Button-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="45dp"-->
<!--        android:text="Sort"-->
<!--        android:layout_alignParentEnd="true"-->
<!--        android:id="@+id/sort"-->
<!--        android:background="@android:color/transparent"-->
<!--        android:textColor="@color/colorPrimary"-->
<!--        android:textSize="20dp"-->
<!--        android:layout_marginEnd="10dp"-->
<!--        android:layout_marginTop="8dp"-->
<!--        android:layout_marginBottom="5dp"/>-->
    <ImageView
        android:id="@+id/mMenus"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="25dp"
        android:src="@drawable/baseline_more_horiz_24" />

</RelativeLayout>