<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edittext"
        android:paddingStart="7dp"
        android:hint="Enter New Task"
        android:paddingEnd="7dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_below="@id/edittext"
        android:text="Save"
        android:layout_alignParentEnd="true"
        android:id="@+id/button_save"
        android:background="@android:color/transparent"
        android:textColor="@android:color/darker_gray"
        android:textSize="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"/>

</RelativeLayout>